@@ -210,7 +210,7 @@
           </row>
           <row>
             <entry>
-              <literallayout class="Normal">        
+              <literallayout class="normal">        
 </literallayout>
             </entry>
           </row>
