@@ -211,7 +211,7 @@
           </row>
           <row>
             <entry>
-              <literallayout class="Normal">         
+              <literallayout class="normal">         
 </literallayout>
             </entry>
           </row>
