@@ -107,7 +107,7 @@ Kernel-Log: 2.6.25.13 korrigiert SicherheitslÃ¼cke, Probleme rund um ACPI
         <listitem>10.07.2008: <ulink url="http://www.heise.de/open/Kernel-Log-USB-Kamera-Treiber-in-2-6-26-neue-2-6-25-Variante-veroeffentlicht--/news/meldung/110704">USB-Kamera-Treiber in 2.6.26, neue 2.6.25-Variante verÃ¶ffentlicht</ulink></listitem>
         <listitem>02.07.2008: <ulink url="http://www.heise.de/open/Kernel-Log-Neue-Grafiktreiber-Treiber-Enwicklungsmodell-erklaert-Nebeneffekte-durch-Stromsparen--/news/meldung/110313">Neue Grafiktreiber, Treiber-Enwicklungsmodell erklÃ¤rt, Nebeneffekte durch Stromsparen</ulink></listitem>
       </itemizedlist>
-      <literallayout class="Normal"><emphasis>Ãltere <ulink url="/glossar/entry/09d9fae15978a6a8">Kernel-Logs</ulink> finden sich Ã¼ber <ulink url="http://www.heise.de/open/news/archiv/">das Archiv</ulink> oder <ulink url="http://www.heise.de/open/suche?sort=d;rm=search;q=Kernel-Log;channel=open">die Suchfunktion</ulink> von <ulink url="http://www.heise.de/open/">heise open</ulink>.</emphasis>(<ulink url="mailto:thl@ct.heise.de">thl</ulink>/c't)</literallayout>
+      <literallayout class="normal"><emphasis>Ãltere <ulink url="/glossar/entry/09d9fae15978a6a8">Kernel-Logs</ulink> finden sich Ã¼ber <ulink url="http://www.heise.de/open/news/archiv/">das Archiv</ulink> oder <ulink url="http://www.heise.de/open/suche?sort=d;rm=search;q=Kernel-Log;channel=open">die Suchfunktion</ulink> von <ulink url="http://www.heise.de/open/">heise open</ulink>.</emphasis>(<ulink url="mailto:thl@ct.heise.de">thl</ulink>/c't)</literallayout>
       <table>
         <row>
           <entry>
